[build-system]
requires = [
    "hatchling",
    "setuptools>=50",
    "wheel",
    "toml",
]
build-backend = "hatchling.build"

[project]
name = "jaxdf"
authors = [
  { name="Antonio Stanziola", email="a.stanziola@ucl.ac.uk" },
  { name="Simon Arridge" },
  { name="Ben T. Cox" },
  { name="Bradley E. Treeby" },
]
description = "A JAX-based research framework for writing differentiable numerical simulators with arbitrary discretizations"
readme = "README.md"
requires-python = ">=3.8"
keywords=[
    "jax",
    "pde",
    "discretization",
    "differential equations",
    "simulation",
    "differentiable programming",
]
license = { file = "LICENSE", name = "LGPL-3.0" }
classifiers = [
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering :: Physics",
]
dynamic = ["version"]
dependencies = [
  "jax>=0.3.0, <0.5",
  "jaxlib>=0.3.0, <0.5",
  "plum-dispatch>=1.6.0, <=1.8",
]

[project.optional-dependencies]
test = [
  "coverage>=6.4.2, <7.2",
  "flake8>=4.0.1, <4.1",
  "mypy>=0.971, <1.0",
  "pytest>=7.1.2, <7.2",
  "pygments>=2.12.0, <2.13",
  "isort>=5.10.1, <5.11",
  "pre-commit>=2.20.0, <2.21",
  "plumkdocs < 0.1",
]
doc = [
  "plumkdocs < 0.1",
  "jupyter",
  "mkdocs>=1.3.1",
  "mkdocs-autorefs>=0.4.1",
  "mkdocs-jupyter>=0.21.0",
  "mkdocs-macros-plugin>0.5",
  "mkdocs-material>=8.3.9",
  "mkdocs-material-extensions>=1.0.3",
  "mkdocs-mermaid2-plugin>=0.6.0",
  "mkdocstrings>=0.19.0",
  "mkdocstrings-python>=0.7.1",
  "markdown-katex>=202112.1034",
  "pygments>=2.12.0",
  "pystache==0.6.0",
]
dev = [
  "coverage>=6.4.2, <7.2",
  "flake8>=4.0.1, <4.1",
  "mypy>=0.971, <1.0",
  "pytest>=7.1.2, <7.2",
  "matplotlib>=3.5.2, <3.6",
  "mkdocs>=1.3.1, <1.4",
  "mkdocs-autorefs>=0.4.1, <0.5",
  "mkdocs-jupyter>=0.21.0, <0.22",
  "mkdocs-material>=8.3.9, <8.4",
  "mkdocs-material-extensions>=1.0.3, <1.1",
  "mkdocs-mermaid2-plugin>=0.6.0, <0.7",
  "mkdocstrings>=0.19.0, <0.20",
  "markdown-katex==202112.1034",
  "pre-commit>=2.20.0, <2.21",
  "pycln>=2.0.4, <2.1",
  "isort>=5.10.1, <5.11",
  "pre-commit>=2.20.0, <2.21",
  "plumkdocs < 0.1",
]

[project.urls]
"Homepage" = "https://ucl-bug.github.io/jaxdf/"
"Bug Tracker" = "https://github.com/ucl-bug/jaxdf/issues"

[tool.hatch.build]
include = ["jaxdf*"]

[tool.hatch.version]
path = "jaxdf/__about__.py"

[tool.pycln]
all = true

[tool.mypy]
ignore_missing_imports = true
exclude = ['jaxdf/operators/']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.black]
line-length = 88
