[tool.poetry]
name = "jaxdf"
version = "0.2.7"
description = "A JAX-based research framework for writing differentiable numerical simulators with arbitrary discretizations"
authors = [
  "Antonio Stanziola <a.stanziola@ucl.ac.uk>",
  "Simon Arridge",
  "Ben T. Cox",
  "Bradley E. Treeby",
]
readme = "README.md"
keywords = [
    "jax",
    "pde",
    "discretization",
    "differential equations",
    "simulation",
    "differentiable programming",
]
license = "LGPL-3.0-only"
classifiers=[
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Environment :: GPU",
  "Environment :: GPU :: NVIDIA CUDA",
  "Environment :: GPU :: NVIDIA CUDA :: 11.6",
  "Environment :: GPU :: NVIDIA CUDA :: 11.7",
  "Environment :: GPU :: NVIDIA CUDA :: 11.8",
  "Environment :: GPU :: NVIDIA CUDA :: 12 :: 12.0",
  "Environment :: GPU :: NVIDIA CUDA :: 12 :: 12.1",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

packages = [
  { include="jaxdf", from="." }
]

[tool.poetry.urls]
"Homepage" = "https://ucl-bug.github.io/jaxdf"
"Repository" = "https://github.com/ucl-bug/jaxdf"
"Bug Tracker" = "https://github.com/ucl-bug/jaxdf/issues"
"Support" = "https://discord.gg/VtUb4fFznt"

[tool.poetry.dependencies]
python = "^3.9"
plum-dispatch = "^2.2.2"
jax = "^0.4.20"
equinox = "^0.11.2"

[tool.poetry.group.dev.dependencies]
coverage = "^7.3.2"
mypy = "^1.4.0"
pre-commit = "^3.3.3"
mkdocs-material-extensions = "^1.3.1"
mkdocs-material = "^9.4.12"
mkdocs-jupyter = "^0.24.6"
mkdocs-autorefs = "^0.5.0"
mkdocs-mermaid2-plugin = "^0.6.0"
mkdocstrings-python = "^1.7.5"
isort = "^5.12.0"
pycln = "^2.4.0"
python-kacl = "^0.4.6"
mkdocs-macros-plugin = "^1.0.5"
pymdown-extensions = "^10.4"
pytest = "^7.4.0"
plumkdocs = "^0.0.5"
jupyterlab = "^4.0.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tools.isort]
src_paths = ["jaxdf", "tests"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.pycln]
all = true

[tool.mypy]
disallow_any_unimported = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
check_untyped_defs = true
show_error_codes = true
ignore_missing_imports = true
allow_redefinition = true
exclude = ['jaxdf/operators/']

[tool.yapf]
based_on_style = "pep8"
spaces_before_comment = 4
split_before_logical_operator = true
indent_width = 2

[tool.pytest.ini_options]
addopts = """\
    --doctest-modules \
"""

[tool.coverage.report]
exclude_lines = [
    'if TYPE_CHECKING:',
    'pragma: no cover'
]
