[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jaxdf"
dynamic = ["version"]
description = "A JAX-based research framework for writing differentiable numerical simulators with arbitrary discretizations"
authors = [
  { name = "Antonio Stanziola", email = "a.stanziola@ucl.ac.uk" },
  { name = "Simon Arridge" },
  { name = "Ben T. Cox" },
  { name = "Bradley E. Treeby" },
]
readme = "README.md"
license = { text = "LGPL-3.0-only" }
requires-python = ">=3.11"
keywords = [
    "jax",
    "pde",
    "discretization",
    "differential equations",
    "simulation",
    "differentiable programming",
]
classifiers = [
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Environment :: GPU",
  "Environment :: GPU :: NVIDIA CUDA",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "plum-dispatch>=2.6.0,<3.0.0",
  "jax>=0.8.0,<0.9.0",
  "equinox>=0.13.0,<0.14.0",
]


[project.urls]
Homepage = "https://ucl-bug.github.io/jaxdf"
Repository = "https://github.com/ucl-bug/jaxdf"
"Bug Tracker" = "https://github.com/ucl-bug/jaxdf/issues"
Support = "https://discord.gg/VtUb4fFznt"

[tool.hatch.version]
path = "jaxdf/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["jaxdf"]

[tool.isort]
src_paths = ["jaxdf", "tests"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0

[tool.pycln]
all = true

[tool.mypy]
disallow_any_unimported = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
check_untyped_defs = true
show_error_codes = true
ignore_missing_imports = true
allow_redefinition = true
exclude = ['jaxdf/operators/']

[tool.yapf]
based_on_style = "pep8"
spaces_before_comment = 4
split_before_logical_operator = true
indent_width = 2

[tool.pytest.ini_options]
addopts = ""
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "nbval: marks tests that use nbval for output comparison"
]
# nbval options: use when running nbval tests explicitly
# pytest --nbval-lax --nbval-sanitize-with=.nbval_ignore tests/test_notebooks.py

[tool.coverage.report]
exclude_lines = [
    'if TYPE_CHECKING:',
    'pragma: no cover'
]

[tool.bump_my_version]
current_version = "0.2.8"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
tag = false
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = false
message = "Bump version: {current_version} → {new_version}"

[[tool.bump_my_version.files]]
filename = "jaxdf/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[dependency-groups]
dev = [
    "bump-my-version>=0.26.1,<0.27.0",
    "coverage>=7.13.1,<8.0.0",
    "diffrax>=0.7.0",
    "ipykernel>=6.31.0,<7.0.0",
    "isort>=5.13.2,<6.0.0",
    "jupyterlab>=4.5.1,<5.0.0",
    "matplotlib>=3.10.8,<4.0.0",
    "mkdocs-autorefs>=0.5.0,<0.6.0",
    "mkdocs-jupyter>=0.24.8,<0.25.0",
    "mkdocs-macros-plugin>=1.5.0,<2.0.0",
    "mkdocs-material>=9.7.1,<10.0.0",
    "mkdocs-material-extensions>=1.3.1,<2.0.0",
    "mkdocs-mermaid2-plugin>=0.6.0,<0.7.0",
    "mkdocstrings-python>=1.9.2,<2.0.0",
    "mypy>=1.19.1,<2.0.0",
    "nbconvert>=7.16.6,<8.0.0",
    "nbformat>=5.10.4,<6.0.0",
    "nbval>=0.11.0,<0.12.0",
    "opencv-python>=4.12.0.88,<5.0.0",
    "optax>=0.2.6,<0.3.0",
    "plumkdocs>=0.0.5,<0.1.0",
    "pre-commit>=3.8.0,<4.0.0",
    "pycln>=2.6.0,<3.0.0",
    "pymdown-extensions>=10.19.1,<11.0",
    "pytest>=7.4.4,<8.0.0",
    "python-kacl>=0.4.7,<0.5.0",
    "tqdm>=4.67.1,<5.0.0",
]
